<resources>
    <string name="app_name">龙泉论坛</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="mc_ad_notification_downloading">正在下载</string>
    <string name="mc_ad_notification_continue">继续下载</string>
    <string name="mc_ad_notification_failed">下载失败</string>
    <string name="mc_ad_notification_succ">下载成功</string>
    <string name="mc_ad_warn_sd_not_exist">SD卡不存在</string>
    <string name="mc_ad_logo_text">推广</string>
    <string name="mc_ad_search_item_down">下载</string>
    <string name="mc_ad_search_item_tell">电话</string>
    <string name="mc_game_center_topbar_title">游戏中心</string>
    <string name="mc_game_center_into_game">进入游戏</string>
    <string name="mc_game_center_game_message">内容简介</string>
    <string name="mc_game_detail_topbar_title">游戏详情</string>
    <string name="mc_forum_cache_load_more">"上次加载时间：{0}
下拉刷新查看更多"</string>
    <string name="mc_game_detail_desc">游戏介绍</string>
    <string name="mc_game_detail_coment">评论</string>
    <string name="mc_game_datail_share">分享</string>
    <string name="mc_game_detail_into_game">进入游戏</string>
    <string name="mc_game_detail_comment_submit">提交</string>
    <string name="mc_game_detail_comment_cancel">取消</string>
    <string name="mc_game_detail_comment_succ">评论成功</string>
    <string name="mc_game_detail_comment_fail">评论失败</string>
    <string name="mc_game_detail_comment_empty">请输入评论内容</string>
    <string name="mc_game_detail_login_prompt">请先登录</string>
    <string name="mc_game_detail_comment_date">评论时间</string>
    <string name="mc_game_center_delete_game">删除该游戏</string>
    <string name="mc_forum_down_load_game">下载游戏</string>
    <string name="mc_game_no_down_load_url">暂时无法下载</string>
    <string name="mc_game_player_num_pre">有</string>
    <string name="mc_game_player_num_suffix">个好友在玩</string>
    <string name="mc_game_url_available">链接不可用</string>
    <string name="mc_game_comment_get_data_fail">获取数据失败</string>
    <string name="mc_forum_connection_fail">网络连接失败！</string>
    <string name="mc_forum_uplode_imgae_fail">图片上传失败！</string>
    <string name="mc_forum_down_imgae_fail">图片加载失败！</string>
    <string name="mc_forum_other_error">未知错误！</string>
    <string name="mc_forum_json_error">数据解析异常</string>
    <string name="mc_forum_no_permission_tag">对不起，您没有操作权限！</string>
    <string name="mc_forum_no_permission">对不起，您没有操作权限！</string>
    <string name="mc_forum_token_invalid">用户验证失败</string>
    <string name="mc_forum_user_not_exist">用户不存在</string>
    <string name="mc_forum_new_user_not_exist">新用户不存在</string>
    <string name="mc_forum_user_pwd_error">用户密码错误</string>
    <string name="mc_forum_user_nick_repeat">用户昵称重复</string>
    <string name="mc_forum_email_exist">邮箱地址已注册！</string>
    <string name="mc_forum_repeat_favorit">已关注</string>
    <string name="mc_forum_add_favorit_succ">收藏成功</string>
    <string name="mc_forum_cancel_favorit_succ">取消收藏</string>
    <string name="mc_forum_key_invalid">社区key无效</string>
    <string name="mc_forum_unknow_error">未知错误</string>
    <string name="mc_forum_pwd_no_same">原密码不正确，请重新输入！</string>
    <string name="mc_forum_sdk_type_version_too_low">论坛SDK版本过低</string>
    <string name="mc_forum_subject_no_exist">主题不存在</string>
    <string name="mc_forum_delete_topic_fail">删除主题失败</string>
    <string name="mc_forum_delete_reply_fail">删除回帖失败</string>
    <string name="mc_forum_update_topic_fail">修改主题失败</string>
    <string name="mc_forum_update_reply_fail">修改回帖失败</string>
    <string name="mc_forum_no_keywords">搜索关键字为空</string>
    <string name="mc_forum_error_black_user_send_msg">用户被禁言发送消息失败</string>
    <string name="mc_forum_error_is_black_of_manager">您的帐号因为不恰当行为被封禁</string>
    <string name="mc_forum_error_maintain">系统正在维护</string>
    <string name="mc_forum_error_publish_sensitive_word">所发表的言论包含敏感词</string>
    <string name="mc_forum_error_longitude_and_latitude">经纬度参数错误</string>
    <string name="mc_forum_error_remote_server">远程服务器错误</string>
    <string name="mc_forum_error_requeset_parameter">参数错误</string>
    <string name="mc_forum_error_operation_failure">操作失败</string>
    <string name="mc_forum_error_gain_picture_fail">获取图片地址失败</string>
    <string name="mc_plaza_search_base_request_url">http://sdk.mobcent.com/baikesdk/</string>
    <string name="mc_game_request_url">http://sdk.mobcent.com/forum/</string>
    <string name="mc_place_poi_request_url">http://api.map.baidu.com/place/v2/search</string>
    <string name="mc_weather_request_base_url">http://dp.mobcent.com/dp/</string>
    <string name="mc_forum_add_to_sys_gallery_succ">成功添加到系统相册！</string>
    <string name="mc_forum_downloading">正在下载请稍后</string>
    <string name="mc_forum_add_to_sys_gallery_fail">添加到系统相册失败！</string>
    <string name="mc_forum_error_permission_download">您无权限！</string>
    <string name="mc_lowest_request_location">请求获取您的地理位置</string>
    <string name="mc_lowest_request_location_accept">允许</string>
    <string name="mc_lowest_request_location_refuse">拒绝</string>
    <string name="mc_place_home_around_text">周边生活</string>
    <string name="mc_place_home_route_text">路线规划</string>
    <string name="mc_place_around_more">更多</string>
    <string name="mc_place_top_map_text">地图</string>
    <string name="mc_place_hotel">宾馆</string>
    <string name="mc_place_cater">餐饮</string>
    <string name="mc_place_life">生活娱乐</string>
    <string name="mc_place_no_telephone">暂无电话</string>
    <string name="mc_place_every_consumption">人均消费：</string>
    <string name="mc_place_rmb_icon">￥</string>
    <string name="mc_place_above">起</string>
    <string name="mc_place_reference_price">参考价：</string>
    <string name="mc_place_around_all">全部</string>
    <string name="mc_place_around_range">范围</string>
    <string name="mc_place_around_default">默认</string>
    <string name="mc_place_around_category">类别</string>
    <string name="mc_place_around_sort">排序</string>
    <string name="mc_place_around_item_arrive">到这去</string>
    <string name="mc_place_around_item_tel">电话</string>
    <string name="mc_place_around_next_page">下一页</string>
    <string name="mc_place_around_up_page">下拉上一页</string>
    <string name="mc_place_around_release_up_page">松开上一页</string>
    <string name="mc_place_key_disable">请在 DemoApplication.java文件输入正确的授权Key,并检查您的网络连接是否正常！</string>
    <string name="mc_place_key_able">key认证成功</string>
    <string name="mc_place_bad_net">您的网络出错啦！</string>
    <string name="mc_place_bad_search_keywords">输入正确的检索条件！</string>
    <string name="mc_place_no_category">暂无类别</string>
    <string name="mc_place_no_sort">暂无排序</string>
    <string name="mc_place_no_distance">暂无范围</string>
    <string name="mc_place_get_location_error">获取位置信息失败</string>
    <string name="mc_place_hotwords_search_base_text">在{0}附近搜索</string>
    <string name="mc_traffic_by_walk">步行</string>
    <string name="mc_traffic_by_bus">公交</string>
    <string name="mc_traffic_by_car">驾车</string>
    <string name="mc_traffic_feel_faster">较快捷</string>
    <string name="mc_traffic_feel_transfer">少换乘</string>
    <string name="mc_traffic_feel_walk">少步行</string>
    <string name="mc_traffic_route_my_location">我的位置</string>
    <string name="mc_traffic_route_least">最少时间</string>
    <string name="mc_traffic_route_unimpeded">避开拥堵</string>
    <string name="mc_traffic_route_short_road">最短路程</string>
    <string name="mc_traffic_route_general_road">不走高速</string>
    <string name="mc_traffic_route_search_location">搜索</string>
    <string name="mc_route_bus_detail_topbar_tital">详情</string>
    <string name="mc_traffic_route_search_no_start_location">请输入起始地点</string>
    <string name="mc_traffic_route_search_no_end_location">请输入目的地</string>
    <string name="mc_traffic_route_arrive">达到</string>
    <string name="mc_traffic_route_about_time">约</string>
    <string name="mc_traffic_route_about_hour">小时</string>
    <string name="mc_traffic_route_minute">分钟</string>
    <string name="mc_traffic_route_distance_km">公里</string>
    <string name="mc_place_route_nav_drive_solution">驾车方案</string>
    <string name="mc_place_route_nav_bus_solution">公交方案</string>
    <string name="mc_place_route_nav_walk_solution">步行方案</string>
    <string name="mc_place_route_nav_around">周边</string>
    <string name="mc_place_route_map_nav">导航</string>
    <string name="mc_place_route_arrive">到达</string>
    <string name="mc_share_wechat">微信</string>
    <string name="mc_share_moments">朋友圈</string>
    <string name="mc_share_qq">QQ好友</string>
    <string name="mc_share_qzone">QQ空间</string>
    <string name="mc_share_sina">微博</string>
    <string name="mc_forum_about">关于</string>
    <string name="mc_forum_clear_cache">清理缓存</string>
    <string name="mc_forum_logout">注销用户</string>
    <string name="mc_forum_publish_choose">请选择</string>
    <string name="mc_forum_take_photo">拍照</string>
    <string name="mc_forum_gallery_pic">相册</string>
    <string name="mc_forum_user_input_user1">请输入用户名（不要使用手机号）</string>
    <string name="mc_forum_user_input_password">请输入密码</string>
    <string name="mc_forum_user_register_succ">恭喜 注册成功！</string>
    <string name="mc_forum_user_register_succ_warn">完善资料</string>
    <string name="mc_forum_user_save_info">保存资料</string>
    <string name="mc_forum_user_see_anywhere">以后再说</string>
    <string name="mc_forum_user_loginboundbtn">绑定</string>
    <string name="mc_forum_user_login_to_bound">请登录账号完成绑定</string>
    <string name="mc_forum_user_registerboundbtn">新注册用户进行绑定</string>
    <string name="mc_forum_mention_friend_reply_notification_flag">\@提示通知</string>
    <string name="mc_forum_message_voice_flag">提示音</string>
    <string name="mc_forum_colse_location_flag">定位服务</string>
    <string name="mc_forum_hide_location_flag">位置信息</string>
    <string name="mc_forum_pic_hide_location_desc">关闭后, 您则不会出现在周边用户和周边帖子</string>
    <string name="mc_forum_pic_mode_flag">无图模式</string>
    <string name="mc_forum_pic_mode_desc">在非WIFI环境下生效</string>
    <string name="mc_forum_recom_app">分享应用</string>
    <string name="mc_forum_user_reply_notification_flag">回复提示通知</string>
    <string name="mc_forum_update">新版本检测</string>
    <string name="mc_forum_dialog_confirm">确定</string>
    <string name="mc_forum_dialog_cancel">取消</string>
    <string name="mc_forum_password_setting">修改密码</string>
    <string name="mc_forum_nickname_label">用户名</string>
    <string name="mc_forum_icon_label">头像</string>
    <string name="mc_forum_gender_label">性别</string>
    <string name="mc_forum_gender_male">男</string>
    <string name="mc_forum_gender_female">女</string>
    <string name="mc_forum_gender_secrecy">保密</string>
</resources>