<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/user_login_box" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/mc_forum_all_bg1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="21.0dip" android:layout_marginTop="30.0dip" android:text="@string/mc_forum_user_login_to_bound" />
    <EditText android:id="@id/user_login_name_edit" android:background="@drawable/dz_bg_input" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/mc_forum_password_edit_height" android:layout_marginLeft="21.0dip" android:layout_marginTop="65.0dip" android:layout_marginRight="21.0dip" android:hint="@string/mc_forum_user_input_user1" android:singleLine="true" style="@style/mc_forum_edit_text" />
    <EditText android:id="@id/user_login_password_edit" android:background="@drawable/dz_bg_input" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/mc_forum_password_edit_height" android:layout_marginLeft="21.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="21.0dip" android:hint="@string/mc_forum_user_input_password" android:singleLine="true" android:layout_below="@id/user_login_name_edit" android:inputType="textPassword" style="@style/mc_forum_edit_text" />
    <Button android:textSize="@dimen/mc_forum_text_size_16" android:textColor="@color/mc_forum_text1_normal_color" android:id="@id/bound_submit_btn" android:background="@drawable/login_bg_corner" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="21.0dip" android:layout_marginTop="22.0dip" android:layout_marginRight="21.0dip" android:text="@string/mc_forum_user_loginboundbtn" android:layout_below="@id/user_login_password_edit" />
    <TextView android:textSize="@dimen/mc_forum_text_size_16" android:textColor="@color/mc_forum_register_color" android:id="@id/reg_bound_btn" android:layout_width="150.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:text="@string/mc_forum_user_registerboundbtn" android:layout_below="@id/bound_submit_btn" android:layout_centerHorizontal="true" />
</RelativeLayout>