<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/dz_bg_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/mc_forum_text_size_16" android:textColor="@color/dz_skin_custom_main_color" android:id="@id/btnCancel" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mc_forum_dialog_cancel" android:layout_centerVertical="true" />
    <TextView android:textSize="@dimen/mc_forum_text_size_18" android:textColor="@color/mc_forum_text4_normal_color" android:gravity="center" android:id="@id/tvTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mc_forum_publish_choose" android:layout_toLeftOf="@id/btnSubmit" android:layout_toRightOf="@id/btnCancel" android:layout_centerVertical="true" />
    <Button android:textSize="@dimen/mc_forum_text_size_16" android:textColor="@color/dz_skin_custom_main_color" android:id="@id/btnSubmit" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mc_forum_dialog_confirm" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
</RelativeLayout>